typescript/checker/tests/conformance/es6/spread/iteratorSpreadInCall10.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            49,
        ),
        hi: BytePos(
            50,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/spread/iteratorSpreadInCall10.ts:2:34
  |
2 | function foo<T>(s: T[]) { return s[0] }
  |                                  ^

